--- a/1.7/cross/Dockerfile
+++ b/1.7/cross/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM buildpack-deps:jessie-scm
 
 # gcc for cgo
@@ -12,18 +11,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 ENV GOLANG_VERSION 1.7.6
 ENV GOPATH /go
-WORKDIR $GOPATH
 
 RUN set -eux; \
     \
 # this "case" statement is generated via "update.sh"
     dpkgArch="$(dpkg --print-architecture)"; \
     case "${dpkgArch##*-}" in \
-        ppc64el) goRelArch='linux-ppc64le'; goRelSha256='8b5b602958396f165a3547a1308ab91ae3f2ad8ecb56063571a37aadc2df2332' ;; \
-        i386) goRelArch='linux-386'; goRelSha256='99f79d4e0f966f492794963ecbf4b08c16a9a268f2c09053a5ce10b343ee4082' ;; \
-        s390x) goRelArch='linux-s390x'; goRelSha256='d692643d1ac4f4dea8fb6d949ffa750e974e63ff0ee6ca2a7c38fc7c90da8b5b' ;; \
-        armhf) goRelArch='linux-armv6l'; goRelSha256='fc5c40fb1f76d0978504b94cd06b5ea6e0e216ba1d494060d081e022540900f8' ;; \
         amd64) goRelArch='linux-amd64'; goRelSha256='ad5808bf42b014c22dd7646458f631385003049ded0bb6af2efc7f1f79fa29ea' ;; \
+        armhf) goRelArch='linux-armv6l'; goRelSha256='fc5c40fb1f76d0978504b94cd06b5ea6e0e216ba1d494060d081e022540900f8' ;; \
+        i386) goRelArch='linux-386'; goRelSha256='99f79d4e0f966f492794963ecbf4b08c16a9a268f2c09053a5ce10b343ee4082' ;; \
+        ppc64el) goRelArch='linux-ppc64le'; goRelSha256='8b5b602958396f165a3547a1308ab91ae3f2ad8ecb56063571a37aadc2df2332' ;; \
+        s390x) goRelArch='linux-s390x'; goRelSha256='d692643d1ac4f4dea8fb6d949ffa750e974e63ff0ee6ca2a7c38fc7c90da8b5b' ;; \
         *) goRelArch='src'; goRelSha256='1a67a4e688673fdff7ba41e73482b0e59ac5bd0f7acf703bc6d50cc775c5baba'; \
             echo >&2; echo >&2 "warning: current architecture ($dpkgArch) does not have a corresponding Go binary release; will be building from source"; echo >&2 ;; \
     esac; \
@@ -43,6 +41,7 @@ RUN set -eux; \
     fi; \
     \
     export PATH="/usr/local/go/bin:$PATH"; \
+    go version; \
     mv /usr/local/go /usr/local/go_bootstrap; \
     mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"; \
     git clone https://go.googlesource.com/go /usr/local/go; \
@@ -54,13 +53,12 @@ RUN set -eux; \
     env GOOS=darwin GOARCH=amd64 ./make.bash; \
     env GOOS=windows GOARCH=amd64 ./make.bash; \
     rm -rf /usr/local/go/.git; \
-    rm -rf /usr/local/go_bootstrap \
-    go version
-
+    rm -rf /usr/local/go_bootstrap
 
 ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
 
+RUN mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH"
+WORKDIR $GOPATH
+
 COPY go-wrapper /usr/local/bin/
-# ENV GOROOT /usr/local/go/
-RUN echo $GOROOT blabal
 RUN go get -u github.com/kardianos/govendor
